clojure: 收官——完成并扩展教程（25 章 -> 28 章），新增 4 示例 + lein-lab 工程，Windows 侧 Leiningen 全量验证
- 新增示例 21_performance（类型提示实测 537 倍/瞬态/数组/memoize）
- 新增示例 22_core_async（channel/go/工作池/alts!!/pipeline/缓冲策略）
- 新增示例 23_ring_web（Ring 模型/中间件/嵌入式 Jetty 真实 HTTP 全链路）
- 新增示例 24_minilisp 压轴（tokenizer/parser/env 链/TCO 百万尾递归，33 断言）
- 新增 lein-lab 工程：test -> run -> uberjar -> java -jar 四步链（15 断言）
- 新增 build.ps1（Windows/Leiningen 入口）与 project.clj；build.sh 加 --lab
- 修 /tmp 硬编码（示例 13/14 跨平台）、文档 Lisp-1/2 事实错误、shadow-clms 笔误
- 全量终验：pwsh build.ps1 -All => 24 示例 + lein-lab 共 25 个验证单元全绿
  （Leiningen 2.13.0 / OpenJDK 26.0.2 / Clojure 1.12.6 / ring 1.15.5 / core.async 1.9.865）